olivier-frontend/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  selector:
    matchLabels:
      app: epi-devops-2
      tier: frontend
      track: stable
  replicas: 3
  template:
    metadata:
      labels:
        app: epi-devops-2
        tier: frontend
        track: stable
    spec:
      containers:
        - name: backend
          image: gcr.io/epi-devops-2/frontend:v1
          ports:
            - containerPort: 80
              protocol: TCP
